--- a/MagnaChainSDKForHtml5/index.html
+++ b/MagnaChainSDKForHtml5/index.html
@@ -25,7 +25,7 @@
 	<script type="text/javascript" src="bn-min.js"></script>	
 	<script type="text/javascript" src="buffer-min.js"></script>
 	<script type="text/javascript" src="ix_crypto-min.js"></script>		
-	<script type="text/javascript" src="celllink-min.js"></script>	
+	<script type="text/javascript" src="magnachain-min.js"></script>	
 	<!--jsfile--Custom-->	
 </body>
 
