--- a/MagnaChainSDKForHtml5/index.html
+++ b/MagnaChainSDKForHtml5/index.html
@@ -17,7 +17,28 @@
 	<meta http-equiv="Cache-Control" content="no-siteapp"/>		
 </head>
 
-<body>	
+<body>
+	<!--以下引用了常用类库，如果不使用，可以删除-->	
+	
+    <!--核心包，封装了显示对象渲染，事件，时间管理，时间轴动画，缓动，消息交互,socket，本地存储，鼠标触摸，声音，加载，颜色滤镜，位图字体等-->
+	<script type="text/javascript" src="libs/laya.core.js"></script>
+	<!--提供了微信小游戏的适配-->
+	<script type="text/javascript" src="libs/laya.wxmini.js"></script>
+	<!--封装了webgl渲染管线，如果使用webgl渲染，可以在初始化时调用Laya.init(1000,800,laya.webgl.WebGL);-->
+    <script type="text/javascript" src="libs/laya.webgl.js"></script>
+	<!--是动画模块，包含了swf动画，骨骼动画等-->
+    <script type="text/javascript" src="libs/laya.ani.js"></script>
+	<!--包含更多webgl滤镜，比如外发光，阴影，模糊以及更多-->
+    <script type="text/javascript" src="libs/laya.filter.js"></script>
+	<!--封装了html动态排版功能-->
+    <script type="text/javascript" src="libs/laya.html.js"></script>
+	<!--粒子类库-->
+    <script type="text/javascript" src="libs/laya.particle.js"></script>
+	<!--提供tileMap解析支持-->
+    <script type="text/javascript" src="libs/laya.tiledmap.js"></script>
+	<!--提供了制作UI的各种组件实现-->
+    <script type="text/javascript" src="libs/laya.ui.js"></script>
+	<!-- 物理引擎matter.js -->
 	<!--用户自定义顺序文件添加到这里-->
 	<!--jsfile--Custom-->		
 	<script type="text/javascript" src="ix_base-min.js"></script>		
@@ -25,8 +46,19 @@
 	<script type="text/javascript" src="bn-min.js"></script>	
 	<script type="text/javascript" src="buffer-min.js"></script>
 	<script type="text/javascript" src="ix_crypto-min.js"></script>		
-	<script type="text/javascript" src="magnachain-min.js"></script>	
-	<!--jsfile--Custom-->	
+	<script type="text/javascript" src="magnachain.js"></script>	
+	<!--jsfile--Custom-->
+
+	<!--自定义的js(src文件夹下)文件自动添加到下面jsfile模块标签里面里-->
+	<!--删除标签，ide不会自动添加js文件，请谨慎操作-->
+	<!--jsfile--startTag-->
+	<script src="js/ui/layaUI.max.all.js"></script>
+	<!--jsfile--endTag-->
+
+	<!--启动类添加到这里-->
+	<!--jsfile--Main-->
+	<script src="js/LayaUISample.js"></script>
+	<!--jsfile--Main-->
 </body>
 
 </html>
